Update LoadedFilterManager tests to reflect code changes